--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "A front-end router with support for type-safe URLs",
   "main": "index.js",
   "scripts": {
+    "serve": "live-server --port=9090",
+    "build:dev": "jspm bundle-sfx src/index dist/ub-routes.js",
+    "build": "jspm bundle-sfx --minify --skip-source-maps src/index dist/ub-routes.min.js",
     "test": "gulp test"
   },
   "repository": {
@@ -19,5 +22,17 @@
   "bugs": {
     "url": "https://github.com/debjitbis08/ub-router/issues"
   },
-  "homepage": "https://github.com/debjitbis08/ub-router"
+  "homepage": "https://github.com/debjitbis08/ub-router",
+  "devDependencies": {
+    "jspm": "~0.15.3",
+    "live-server": "~0.7.1"
+  },
+  "jspm": {
+    "directories": {},
+    "devDependencies": {
+      "babel": "npm:babel-core@^5.0.12",
+      "babel-runtime": "npm:babel-runtime@^5.0.12",
+      "core-js": "npm:core-js@^0.8.1"
+    }
+  }
 }
